// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order component matches the snapshot 1`] = `
<DocumentFragment>
  <div
    id="complete-order"
  >
    <div
      id="google-map"
    >
      <div>
        Map'll be here
      </div>
    </div>
    <div
      id="order-info"
    >
      <h1>
        Complete order
      </h1>
      <div
        id="counts"
      >
        <h4>
          Total cost: 
          <span>
            $27.49
          </span>
        </h4>
        <h4>
          Name: 
          <span />
        </h4>
        <h4>
          Payment: 
          <span>
            Cash
          </span>
        </h4>
      </div>
      <div
        id="payment"
      >
        <h3>
          Select payment method
        </h3>
        <div
          id="payment-method"
        >
          <button
            class="active"
          >
            <img
              alt=""
              src="undefined/media/img/cash.svg"
            />
          </button>
          <button
            class="[object Object]"
            data-testid="web-card"
          >
            <img
              alt=""
              src="undefined/media/img/internet.svg"
            />
          </button>
          <button
            class="[object Object]"
          >
            <img
              alt=""
              src="undefined/media/img/card.svg"
            />
          </button>
          <div
            data-testid="payment-select"
            id="card-select"
            style="display: none;"
          >
            <p
              class="error"
              style="display: none;"
            >
              Payment card is required
            </p>
            <div
              class=" css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-3-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class=" css-1araxoe-control"
              >
                <div
                  class=" css-hlgwow"
                >
                  <div
                    class=" css-1jqq78o-placeholder"
                    id="react-select-3-placeholder"
                  >
                    Select card
                  </div>
                  <div
                    class=" css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-3-placeholder"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class=""
                      id="react-select-3-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class=" css-1wy0on6"
                >
                  <span
                    class=" css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <p
              id="add-payment"
            >
              Add payment card
            </p>
          </div>
        </div>
      </div>
      <p />
      <div
        id="btns"
      >
        <button
          id="cancel"
        >
          Cancel
        </button>
        <button
          id="order"
        >
          Order
        </button>
      </div>
      <p
        style="display: none;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order component switches payment mode and selects payment card 1`] = `
<DocumentFragment>
  <div
    id="complete-order"
  >
    <div
      id="google-map"
    >
      <div>
        Map'll be here
      </div>
    </div>
    <div
      id="order-info"
    >
      <h1>
        Complete order
      </h1>
      <div
        id="counts"
      >
        <h4>
          Total cost: 
          <span>
            $27.49
          </span>
        </h4>
        <h4>
          Name: 
          <span />
        </h4>
        <h4>
          Payment: 
          <span>
            Card via Internet
          </span>
        </h4>
      </div>
      <div
        id="payment"
      >
        <h3>
          Select payment method
        </h3>
        <div
          id="payment-method"
        >
          <button
            class="[object Object]"
          >
            <img
              alt=""
              src="undefined/media/img/cash.svg"
            />
          </button>
          <button
            class="active"
            data-testid="web-card"
          >
            <img
              alt=""
              src="undefined/media/img/internet.svg"
            />
          </button>
          <button
            class="[object Object]"
          >
            <img
              alt=""
              src="undefined/media/img/card.svg"
            />
          </button>
          <div
            data-testid="payment-select"
            id="card-select"
            style="display: flex; flex-direction: column; gap: 5px;"
          >
            <p
              class="error"
              style="display: none;"
            >
              Payment card is required
            </p>
            <div
              class=" css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-4-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                class=" css-1araxoe-control"
              >
                <div
                  class=" css-hlgwow"
                >
                  <div
                    class=" css-1dimb5e-singleValue"
                  >
                    **** **** **** 3452
                  </div>
                  <div
                    class=" css-19bb58m"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="true"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      class=""
                      id="react-select-4-input"
                      role="combobox"
                      spellcheck="false"
                      style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class=" css-1wy0on6"
                >
                  <span
                    class=" css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <p
              id="add-payment"
            >
              Add payment card
            </p>
          </div>
        </div>
      </div>
      <p />
      <div
        id="btns"
      >
        <button
          id="cancel"
        >
          Cancel
        </button>
        <button
          id="order"
        >
          Order
        </button>
      </div>
      <p
        style="display: none;"
      />
    </div>
  </div>
</DocumentFragment>
`;
